Clean up nullability